ci: Trigger Docker publish after syncing fork

--- a/.github/workflows/update-fork.yml
+++ b/.github/workflows/update-fork.yml
@@ -8,8 +8,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: dabreadman/sync-upstream-repo@v1.0.0.b
+        id: sync
         with:
           upstream_repo: "https://github.com/speced/bikeshed.git"
           upstream_branch: main
           downstream_branch: main
           token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Trigger Docker Publish
+        if: steps.sync.outputs.has_new_commits == 'true'
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          event-type: trigger-docker-publish
